[project]
name = "behave-unchained"
version = "0.1.0"
description = "A library of Behave steps to import into projects."
authors = [{ name = "Chris Kemp", email = "chris.kemp3000@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
package-mode = false
# packages = [{include = "behave"}]

[tool.poetry.dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
behave = "^1.2.6"
jsonata-python = "^0.5.3"
fastapi = "^0.116.0"
asyncio = "^3.4.3"
uvicorn = "^0.35.0"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["**/tests/test_*.py"]
